# Antigravity-Client

./: .env  .gitignore  README.md  package-lock.json  package.json  proxy8046.js  push_to_github.sh  system_architecture_and_proxy_prompt.md
.github/workflows/: release.yml
src/: App.css  App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: db.rs  dns.rs  lib.rs  local_proxy.rs  main.rs  tunnel.rs
src-tauri/src/utils/: protobuf.rs
